feat: Перейти на кастомный класс связного спискаы